# cuda_demos

./: CMakeLists.txt  README.md  build.py  simple_assert.h
gpu_device_info/: CMakeLists.txt  check_device_info.cu  gpu_device_info.cc  gpu_device_info.h  test_gpu_device_info.cu
scripts/: build_and_test.ps1  cmake.ps1  nsys_profile.ps1  rebuild_all.ps1  test.ps1
sum_array/: CMakeLists.txt  cublas_sum.cu  sum_array.cu
sum_matrix/: CMakeLists.txt  check_thread_index.cu  sum_matrix_1d_grid_1d_block.cu  sum_matrix_2d_grid_1d_block.cu  sum_matrix_2d_grid_2d_block.cu
timer/: CMakeLists.txt  test_timer.cc  timer.cc  timer.h
